--- a/zb_users/theme/qxcms/style/style.css
+++ b/zb_users/theme/qxcms/style/style.css
@@ -41,16 +41,39 @@ img{border:none;}
 #nav li:hover ul{left: auto;}
 #nav li.sfhover ul{left: auto;}*/
 
-.top-content{width: 960px;margin: 10px 0 10px 0;overflow: hidden;}
-.top-img{width: 560px;height: 335px;float: left;}
+.navbar-left{width: 150px; height: 300px; float: left; margin: 10px 0 10px 0; background-color: transparent;}
+.navbar-left-item{width: 150px; height: 30px; margin-bottom: 10px; color: black; font-size: 17px; font-weight: bold; line-height: 30px; padding-left: 10px;border-left: 5px solid #2e3190}
+.navbar-left-item:hover{background-color: #d7d9f9;}
+.navbar-left-item a:visited, .navbar-left-item a:hover, .navbar-left-item a:link{color: black;}
+.navbar-left-active{background-color: #ced0f0;}
+.main-content{width: 810px; height: auto; float: left;}
+.top-content,.top-content-zjcg{width: 960px;margin: 10px 0 10px 0;overflow: hidden;}
+.top-content{width: 960px;}
+.top-content-zjcg{width: 810px;}
+.top-content-left{width: 270px; height: 300px; float: left; background-color: #ced0f0}
+.top-content-middle{width: 270px; height: 300px; float: left; background-color: #ced0f0}
+.top-content-right{width: 270px; height: 300px; float: left; background-color: #ced0f0}
+.top-content-container{max-width: 260px; height: 100%; margin: 0 5px; overflow: hidden; border-radius:15px; -moz-border-radius:15px; /* 老的 Firefox */}
+.top-content-container img{width: 260px; height: 210px;}
+.top-content-left .top-content-container{background-color: #948abf;}
+.top-content-middle .top-content-container{background-color: #70c6fb;}
+.top-content-right .top-content-container{background-color: #948abf;}
+.top-content-img-label{width: 100%; height: 90px; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;}
+.img-label-time{width: 80px; height: 90px; line-height: 90px; margin-left: 10px; float: left; color: white;}
+.img-label-title{width: 130px; height: 60px; color: white; float: right; margin: 10px 10px; padding: 5px;border-radius: 10px; text-overflow: ellipsis; background-color: #766e98;}
+.img-label-title:hover{color: #8c1515;}
+.top-content-middle .img-label-title{background-color: #599ec8;}
+.top-img{width: 560px;height: 335px; float: left;}
 .top-img img{width: 560px;height: 335px;}
 .top-art{width:380px;height: 335px;float: left;margin-left: 20px;}
 .top-art dl{width: 370px;height: 50px;margin: 2px 10px 18px 0;overflow: hidden;}
 .top-art dt{height: 27px;overflow: hidden; font-size: 17px;margin-bottom: 5px;font-weight: 600;}
-.top-art dd{font-size: 15px;margin: 0px;color: #555;}
+.top-art dd{font-size: 15px;margin: 0;color: #555;}
 .big-ad{margin-bottom: 10px;}
 .big-ad img{width: 960px;height: 60px;}
-.cms-content{width: 960px;height: auto;overflow: hidden;}
+.cms-content,.cms-content-zjcg{height: auto; overflow: hidden;}
+.cms-content{width: 960px;}
+.cms-content-zjcg{width: 810px;}
 .cms-title{width: 960px; height: 50px; border-bottom: 2px solid #336699; text-align: center}
 .cms-title h2{width: 960px; margin: 0 auto;position: relative;top: 11px;border-bottom: 6px solid #336699;padding-bottom: 2px;padding-right: 20px;font-weight: 500; display: inline-block}
 .cms-title h2 a{color: #336699;}
@@ -63,10 +86,19 @@ img{border:none;}
 .cms-up ul li{margin: 5px 0}
 .cms-up ul li a{color: #4e4e4e;}
 .cms-up ul li a:hover{text-decoration: underline; color: #8c1515;}
-.cms-left-title,.cms-right-title{width:380px; margin-bottom:10px; display: inline-block}
+.cms-left-title,.cms-right-title{width: 460px; margin-bottom:10px; display: inline-block}
 .cms-left-title span,.cms-right-title span{line-height:30px; float: right}
 .cms-left-title span img,.cms-right-title span img{width:25px; height:25px; margin: 5px 0;}
-.cms-left,.cms-right{width: 380px; height: auto; float: left; padding: 0 50px; text-align: center}
+.cms-left-cxtd-title{width: 480px; height: 40px; display: inline-block; }
+.cms-left-cxtd-title h2{font-size: 24px; border-left: 5px solid #b53b3d; margin: 5px 0; padding-left: 10px;}
+.cms-left,.cms-right{width: 460px; height: auto; float: left; text-align: center}
+.cms-left-cxtd,.cms-right-cxtd{width: 480px; height: 270px; float: left;}
+.tu-f-cxtd{width: 480px; height: 270px; overflow: hidden; display: inline-block}
+.tu-f-cxtd img{width: 480px; height: 270px; float: left;}
+.tu-f-cxtd h3{position: relative; float: left; bottom: 30px; left: 0; width: 480px; height: 30px; line-height: 30px; padding: 0 10px; margin: 0; font-size: 14px; font-weight: normal; color: #fff; background: rgba(0,0,0,0.6); display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.tu-f-cxtd h3:hover{background: rgba(255,50,0,0.6);}
+.cms-left{margin-right: 20px}
+.cms-right{margin-left: 20px}
 .cms-left .list-tu{width: 308px; height: 85px; list-style-type: none;}
 .cms-left .list-tu img{width: 100px; height: 80px; float: left; margin-right: 10px;}
 .cms-left h2,.cms-right h2{float:left; margin: 5px 0; color: #000; font-family: '黑体'; font-size: 20px; font-weight: bolder;}
@@ -75,17 +107,22 @@ img{border:none;}
 .cms-tui{width: 290px; height: auto; float: left; padding: 0 0 0 10px; border-left: 2px solid #C0C0C0; border-right: 2px solid #C0C0C0; margin: 20px 0px 5px 10px;}
 .cms-left h3{padding-left: 10px; font-weight: 600; font-size: 16px;}
 .cms-right h3{padding-left: 20px; font-weight: 600; font-size: 16px;}
-.cms-lr-list{width: 100%; height: auto; float: left}
+.cms-lr-list{width: 100%; height: 210px; float: left}
+.cms-lr-list ul{margin: 0 0; padding-left: 0}
 .cms-lr-list ul li{height: 30px; line-height: 30px; margin: 5px 0; overflow: hidden; text-overflow: ellipsis;}
 .cms-lr-list ul li a{float: left; font-size:16px; color: #4e4e4e;}
 .cms-lr-list ul li a:hover{text-decoration: underline; color: #8c1515;}
+.cms-lr-list-title{max-width: 350px; height: 30px; overflow: hidden; float: left}
+.cms-lr-list-date{width: 100px; height: 30px; float: right}
+.cms-lr-more{width: 100%; height: 20px; float: left;}
+.cms-lr-more a{font-size: 14px; line-height: 20px; float: right; margin: 3px 20px;}
 .cms-te{width: 280px; height: auto; float: left; padding: 0 10px 0 12px; border-left: 2px solid #C0C0C0; border-right: 2px solid #C0C0C0; margin: 20px 0px 5px 10px;}
 .cms-te ul,.top-art ul{list-style-type: none; padding: 0px;}
 .cms-te ul li,.top-art ul li{line-height: 26px; height: 26px; overflow: hidden; background-image: url(img/li.png); background-repeat: no-repeat; background-position: 0px 13px; text-indent: 10px;}
 .cms-te .cms-up h3,.cms-te .cms-down h3{margin: 0 0 18px 0; font-weight: 600; font-size: 16px;}
-.tu-f{width: 380px; height: 220px; overflow: hidden; display: inline-block}
-.tu-f img{width: 380px; height: 220px; float: left;}
-.tu-f h3{position: relative; float: left; bottom: 30px; left: 0; width: 380px; height: 30px; line-height: 30px; padding: 0 10px; margin: 0; font-size: 14px; font-weight: normal; color: #fff; background: rgba(0,0,0,0.6); display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.tu-f{width: 460px; height: 250px; overflow: hidden; display: inline-block}
+.tu-f img{width: 460px; height: 250px; float: left;}
+.tu-f h3{position: relative; float: left; bottom: 30px; left: 0; width: 460px; height: 30px; line-height: 30px; padding: 0 10px; margin: 0; font-size: 14px; font-weight: normal; color: #fff; background: rgba(0,0,0,0.6); display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 .tu-f h3:hover{background: rgba(255,50,0,0.6);}
 .cms-tui .tu-s{width: 128px; height: 100px; float: left; margin-right: 17px;}
 .cms-tui .tu-s img{width: 128px; height: 100px;}
