--- a/zb_users/theme/qxcms/style/style.css
+++ b/zb_users/theme/qxcms/style/style.css
@@ -265,13 +265,29 @@ img{border:none;}
 .art-xg-box{width: 154px; float: left;margin: 5px; overflow: hidden;}
 .art-xg-box img{width: 154px; height: 125px; float:left;}
 .art-xg-box span{font-size: 14px; float:left;}
+/*论文*/
+.paper-t-full{width: 960px; margin:30px 0 10px 0; font-size:24px; text-align:center;}
+.paper-a-full,.paper-o-full{width: 960px; margin: 10px 0; font-size: 14px; color: #5a5fc9; text-align: center;}
+.horizon-line{width: 960px; height: 2px; margin: 15px 0;}
+.bg-lightgray{background-color: lightgrey}
+.paper-content-left{width: 810px; float: left;}
+.paper-content-left p{width: 790px; margin: 10px 10px; text-indent: 28px;}
+.paper-img-right{width: 110px; height: 160px; margin: 10px; padding: 5px; border: 1px solid lightgrey; background-color: white; float: right;}
+.paper-img-right img{width: 110px; height: 160px;}
+/*著作列表*/
+.cms-title-zzfb{width: 960px; height: 40px; margin-bottom: 10px; color: black; font-size: 24px; line-height: 40px; padding-left: 10px;border-left: 5px solid #2e3190}
+.cms-list-zzfb{width: 956px; height: auto; border: 2px solid #ced0f0}
+.cms-list-item{width: 235px; height: 300px; display: inline-block;}
+.cms-list-item img{width: 110px; height: 160px; margin: 10px 55px; padding: 5px; border: 1px solid lightgrey; display: block;}
+.cms-list-item span{width: 155px; max-height: 40px; margin: 10px 40px; font-size: 15px; line-height: 20px; text-align:center; overflow: hidden; display: block;}
+/*著作*/
 /*评论*/
 .commentpost p input{width: 200px;height: 27px;}
 .commentpost p textarea{width: 500px;height: 120px;}
 .commentpost p .button{width: 55px;height: 30px;background-color: #FF3300;color: #fff;border-radius: 10px;}
 .commentlist{width: 658px;height: auto;}
 .commentlist ul{list-style-type: none;padding: 0;margin: 0;}
-.commentlist ul ul{padding: 10px;padding-bottom: 5px;}
+.commentlist ul ul{padding: 10px; padding-bottom: 5px;}
 .commentone{display: block;}
 .commentone .image{width: 40px;height: auto;float: left;padding-top: 10px;}
 .commentone .image img{width: 40px;height: 40px;}
