--- a/zb_users/theme/qxcms/style/style.css
+++ b/zb_users/theme/qxcms/style/style.css
@@ -320,6 +320,15 @@ img{border:none;}
 .cms-list-item img{width: 110px; height: 160px; margin: 10px 55px; padding: 5px; border: 1px solid lightgrey; display: block;}
 .cms-list-item span{width: 155px; max-height: 40px; margin: 10px 40px; font-size: 15px; line-height: 20px; text-align:center; overflow: hidden; display: block;}
 /*著作*/
+.zhuzuo-img{width: 300px; height: 400px; margin: 10px; float: left;}
+.zhuzuo-img img{width: 300px; height: 400px;}
+.zhuzuo-right{width: 640px; height: 400px; margin-top: 10px; float: left; overflow: hidden;}
+.zhuzuo-content-container{width: 960px; float: left;}
+.zhuzuo-info-title,.zhuzuo-author-title,.zhuzuo-content-title{width: 80px; height: 30px; line-height: 30px; padding: 0 20px; margin-bottom: 20px; font-size: 20px; background-color: #ced0f0}
+.zhuzuo-content-title{margin-left: 10px;}
+.zhuzuo-info,.zhuzuo-author{margin-bottom: 10px;}
+.zhuzuo-info p,.zhuzuo-author p{margin: 0 10px;}
+.zhuzuo-author a{text-decoration: underline;}
 /*评论*/
 .commentpost p input{width: 200px;height: 27px;}
 .commentpost p textarea{width: 500px;height: 120px;}
