--- a/zb_users/theme/qxcms/style/style.css
+++ b/zb_users/theme/qxcms/style/style.css
@@ -65,7 +65,7 @@ img{border:none;}
 .img-label-title{width: 130px; height: 60px; color: white; float: right; margin: 10px 10px; padding: 5px;border-radius: 10px; text-overflow: ellipsis; background-color: #766e98;}
 .img-label-title:hover{color: #8c1515;}
 .top-content-middle .img-label-title{background-color: #599ec8;}
-.top-img{width: 560px;height: 335px; float: left;}
+.top-img{position: relative; width: 560px;height: 335px; float: left;}
 .top-img img{width: 560px;height: 335px;}
 .top-art{width:380px;height: 335px;float: left;margin-left: 20px;}
 .top-art dl{width: 370px;height: 50px;margin: 2px 10px 18px 0;overflow: hidden;}
@@ -103,6 +103,13 @@ img{border:none;}
 .content-yjyld{margin-top: 10px;}
 .content-yjyld p{text-indent: 2em; margin-top: 1em;}
 .content-yjyld img{width: 120px; height: 160px; float: left; margin: 0 1em 1em 0;}
+/*国家战略*/
+.tab-nbyj{position: absolute; top: 0; right: 0; width: 60px; height: 270px; overflow: hidden; background: linear-gradient(rgba(51, 102, 153, 0.6), rgba(51, 102, 153, 0));}
+.tab-item-nbyj{position: relative; left: -20px; top: 30px; width: 100px; height: 50px; transform: rotate(15deg); /* for IE */filter:alpha(opacity=60); /* CSS3 standard */opacity:0.6; background-color: white}
+.tab-item-active{/* for IE */filter:alpha(opacity=90); /* CSS3 standard */opacity:0.9;}
+.tab-label-nbyj{width: 100px; height: 50px; line-height: 25px; margin: 5px auto; text-align: center; transform: rotate(-15deg);}
+.show{}
+.hide{display: none;}
 /*要闻样式*/
 .cms-yw{height: 360px}
 .cms-yw-img{width: 750px;display: inline-block;vertical-align: top}
