--- a/zb_users/theme/qxcms/style/style.css
+++ b/zb_users/theme/qxcms/style/style.css
@@ -1,4 +1,3 @@
-/*千寻制作*/
 body{margin: 0; padding: 0;font-family: "Microsoft YaHei",MingLiu,Georgia,Sans-serif;color: #4B4B4B;}
 a{text-decoration: none;color: #646464;}
 a:hover{color: #FF3300;}
@@ -468,3 +467,8 @@ img{border:none;}
 /*系统侧栏*/
 .right_c ul{list-style-type: none; padding: 0 10px;;}
 .right_c ul li{line-height: 1.5;}
+/*搜索页面*/
+.search-list-item{width:658px; height: 150px; overflow: hidden; position: relative;}
+.search-list-item img{width: 220px; height: 150px; float: left; margin-right: 20px;}
+.search-list-item h3{width: 418px; float: left; margin: 0px 0 10px 0; font-size: 20px; line-height: 1.5; font-weight: 400;}
+.search-list-item p{width: 418px; float: left; font-size: 15px; line-height: 1.5; text-indent: 29px;}
