搜索多参数重写cmd.php，tomxie，2017年8月12日00点32分

--- a/zb_users/theme/qxcms/style/style.css
+++ b/zb_users/theme/qxcms/style/style.css
@@ -9,7 +9,7 @@ img{border:none;}
 .header-top .logo img{height:50px;}
 .header-top .search{width: 580px;height: 50px;float: right;}
 .header-top .search form{width: 300px;float: right;}
-.header-top .search .input{width: 200px; height: 25px; margin:10px;}
+.header-top .search .input{float: left; width: 200px; height: 25px; margin:10px;}
 .header-top .search .submit{width: 48px; height: 30px; margin: 10px 0 10px 0; border: 1px solid #C1C1C1; background-color: #F1F1F1;}
 .header-top .search .search-tag{width: 280px; float: left; margin: 14px 0 14px 0; overflow: hidden;}
 .header-top .search .search-tag ul{list-style-type: none; padding: 0px; margin: 0px;}
